--- a/v2/sidebar.css
+++ b/v2/sidebar.css
@@ -55,6 +55,6 @@
 
 .content {
   min-height: 100svh;
-  max-width: 1200px;
-  margin: 0  auto 0 19rem;
+  max-width: 82rem;
+  margin: 0 auto 0 19rem;
 }
