--- a/v2/button.css
+++ b/v2/button.css
@@ -251,7 +251,7 @@
   background-color: var(--tomato-500);
 }
 
-.btn-outline {
+.btn-o {
   display: inline-block;
   border-radius: 8px;
   border: 2px solid var(--c-primary);
@@ -265,8 +265,200 @@
   cursor: pointer;
   margin: 2px;
 }
-
-.btn-outline:hover {
+.btn-o:hover {
   background-color: var(--c-primary);
   color: var(--bg-primary);
+}
+
+.btn-o-black {
+  border-color: var(--black-400);
+  color: var(--black-400);
+}
+.btn-o-black:hover {
+  background-color: var(--black-400);
+  color: var(--black-900);
+}
+.btn-o-maroon {
+  border-color: var(--maroon-400);
+  color: var(--maroon-400);
+}
+.btn-o-maroon:hover {
+  background-color: var(--maroon-400);
+  color: var(--maroon-900);
+}
+.btn-o-red {
+  border-color: var(--red-400);
+  color: var(--red-400);
+}
+.btn-o-red:hover {
+  background-color: var(--red-400);
+  color: var(--red-900);
+}
+.btn-o-pink {
+  border-color: var(--pink-400);
+  color: var(--pink-400);
+}
+.btn-o-pink:hover {
+  background-color: var(--pink-400);
+  color: var(--pink-900);
+}
+.btn-o-lightpink {
+  border-color: var(--lightpink-400);
+  color: var(--lightpink-400);
+}
+.btn-o-lightpink:hover {
+  background-color: var(--lightpink-400);
+  color: var(--lightpink-900);
+}
+.btn-o-orchid {
+  border-color: var(--orchid-400);
+  color: var(--orchid-400);
+}
+.btn-o-orchid:hover {
+  background-color: var(--orchid-400);
+  color: var(--orchid-900);
+}
+.btn-o-purple {
+  border-color: var(--purple-400);
+  color: var(--purple-400);
+}
+.btn-o-purple:hover {
+  background-color: var(--purple-400);
+  color: var(--purple-900);
+}
+.btn-o-navy {
+  border-color: var(--navy-400);
+  color: var(--navy-400);
+}
+.btn-o-navy:hover {
+  background-color: var(--navy-400);
+  color: var(--navy-900);
+}
+.btn-o-blue {
+  border-color: var(--blue-400);
+  color: var(--blue-400);
+}
+.btn-o-blue:hover {
+  background-color: var(--blue-400);
+  color: var(--blue-900);
+}
+.btn-o-cyan {
+  border-color: var(--cyan-400);
+  color: var(--cyan-400);
+}
+.btn-o-cyan:hover {
+  background-color: var(--cyan-400);
+  color: var(--cyan-900);
+}
+.btn-o-darkcyan {
+  border-color: var(--darkcyan-400);
+  color: var(--darkcyan-400);
+}
+.btn-o-darkcyan:hover {
+  background-color: var(--darkcyan-400);
+  color: var(--darkcyan-900);
+}
+.btn-o-slate {
+  border-color: var(--slate-400);
+  color: var(--slate-400);
+}
+.btn-o-slate:hover {
+  background-color: var(--slate-400);
+  color: var(--slate-900);
+}
+.btn-o-teal {
+  border-color: var(--teal-400);
+  color: var(--teal-400);
+}
+.btn-o-teal:hover {
+  background-color: var(--teal-400);
+  color: var(--teal-900);
+}
+.btn-o-darkgreen {
+  border-color: var(--darkgreen-400);
+  color: var(--darkgreen-400);
+}
+.btn-o-darkgreen:hover {
+  background-color: var(--darkgreen-400);
+  color: var(--darkgreen-900);
+}
+.btn-o-green {
+  border-color: var(--green-400);
+  color: var(--green-400);
+}
+.btn-o-green:hover {
+  background-color: var(--green-400);
+  color: var(--green-900);
+}
+.btn-o-lightgreen {
+  border-color: var(--lightgreen-400);
+  color: var(--lightgreen-400);
+}
+.btn-o-lightgreen:hover {
+  background-color: var(--lightgreen-400);
+  color: var(--lightgreen-900);
+}
+.btn-o-olive {
+  border-color: var(--olive-400);
+  color: var(--olive-400);
+}
+.btn-o-olive:hover {
+  background-color: var(--olive-400);
+  color: var(--olive-900);
+}
+.btn-o-gold {
+  border-color: var(--gold-400);
+  color: var(--gold-400);
+}
+.btn-o-gold:hover {
+  background-color: var(--gold-400);
+  color: var(--gold-900);
+}
+.btn-o-yellow {
+  border-color: var(--yellow-400);
+  color: var(--yellow-400);
+}
+.btn-o-yellow:hover {
+  background-color: var(--yellow-400);
+  color: var(--yellow-900);
+}
+.btn-o-peach {
+  border-color: var(--peach-400);
+  color: var(--peach-400);
+}
+.btn-o-peach:hover {
+  background-color: var(--peach-400);
+  color: var(--peach-900);
+}
+.btn-o-brown {
+  border-color: var(--brown-400);
+  color: var(--brown-400);
+}
+.btn-o-brown:hover {
+  background-color: var(--brown-400);
+  color: var(--brown-900);
+}
+.btn-o-darkbrown {
+  border-color: var(--darkbrown-400);
+  color: var(--darkbrown-400);
+}
+.btn-o-darkbrown:hover {
+  background-color: var(--darkbrown-400);
+  color: var(--darkbrown-900);
+}
+.btn-o-orange {
+  border-color: var(--orange-400);
+  color: var(--orange-400);
+}
+.btn-o-orange:hover {
+  background-color: var(--orange-400);
+  color: var(--orange-900);
+}
+.btn-o-tomato {
+  border-color: var(--tomato-400);
+  color: var(--tomato-400);
+}
+.btn-o-tomato:hover {
+  background-color: var(--tomato-400);
+  color: var(--tomato-900);
 }
