--- a/v2/color.css
+++ b/v2/color.css
@@ -182,15 +182,15 @@
   --gold-800: #9b7618;
   --gold-900: #846418;
 
-  --yellow-100: #ffed96;
-  --yellow-200: #ffe97a;
-  --yellow-300: #ffe55c;
-  --yellow-400: #ffe137;
-  --yellow-500: #e5ca34;
-  --yellow-600: #ccb431;
-  --yellow-700: #b39e2d;
-  --yellow-800: #9b892a;
-  --yellow-900: #837426;
+  --yellow-100: #ffffad;
+  --yellow-200: #ffff90;
+  --yellow-300: #ffff71;
+  --yellow-400: #ffff4c;
+  --yellow-500: #ffff00;
+  --yellow-600: #ffee14;
+  --yellow-700: #e0d01a;
+  --yellow-800: #d0c00c;
+  --yellow-900: #c0b00a;
 
   --peach-100: #ebd0b9;
   --peach-200: #e9cab0;
